--- a/scripts/cleaning/sumstats_cleaning.Rmd
+++ b/scripts/cleaning/sumstats_cleaning.Rmd
@@ -193,11 +193,10 @@ source(file = "../functions/standardise_GWAS_column_names.R")
 ```
 
 # Chromosome numbering
-We are changing naming of chromosomes to PLINK standard.
-As a reference, we are using the PLINK naming:
+We are changing the naming of the chromosomes to PLINK standard. As a reference, we are using the PLINK naming:
 plink chromosome numbering: https://zzz.bwh.harvard.edu/plink/data.shtml
 
-This chunk creates the functions "parse_SNP_column_as_rs_number" and "parse_CHR_column" which parses the SNP and CHR columns respectively. It means that it can read different formats of data in those and convert it to rs-id and chromosome number which we expect to be in the SNP and CHR columns.
+This chunk reads in the functions "parse_SNP_column_as_rs_number" and "parse_CHR_column" which parses the SNP and CHR columns respectively. It means that it can read different formats of data in those and convert it to rs-id and chromosome number which we expect/save to be in the SNP and CHR columns.
 ```{r Chromosome numbering}
 source(file = "../functions/parse_SNP_column_as_rs_number.R")
 
